# NitroGen-Keyboard-Mouse-Based

./: .env.example  .gitignore  README.md  RUNNING.md  pyproject.toml
nitrogen/: game_env.py  process_picker.py
nitrogen/action_adapters/: gamepad_to_km.py
nitrogen/input/: __init__.py  base.py  gamepad.py  keyboard_mouse.py
scripts/: play.py  record_km.py  serve.py
